--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev:backend": "npm run dev --prefix backend",
+    "lint:backend": "npm run lint --prefix backend",
+    "start:backend": "npm start --prefix backend",
+    "prettier:backend": "npm run prettier --prefix backend",
     "dev:ui": "npm run dev --prefix frontend",
     "build:ui": "npm run build --prefix frontend",
     "lint:ui": "npm run lint --prefix frontend",
