--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "lint:backend": "npm run lint --prefix backend",
     "start:backend": "npm start --prefix backend",
     "prettier:backend": "npm run prettier --prefix backend",
-    "dev:ui": "npm run dev --prefix frontend",
-    "build:ui": "npm run build --prefix frontend",
-    "lint:ui": "npm run lint --prefix frontend",
-    "preview:ui": "npm run preview --prefix frontend"
+    "dev:frontend": "npm run dev --prefix frontend",
+    "build:frontend": "npm run build --prefix frontend",
+    "lint:frontend": "npm run lint --prefix frontend",
+    "preview:frontend": "npm run preview --prefix frontend"
   },
   "repository": {
     "type": "git",
