--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,6 +14,13 @@ spec:
     spec:
       containers:
         - name: sijoittaja
-          image: l0uko/sijoittaja-frontend:latest
+          image: l0uko/sijoittaja-frontend:staging
           ports:
             - containerPort: 4173
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+            requests:
+              memory: "50Mi"
+              cpu: "50m"
