--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint .",
-    "start": "node build/index.js",
-    "prettier": "prettier --write ."
+    "start": "node build/index.js"
   },
   "author": "tilasijoittelija-tiimi",
   "license": "MIT",
@@ -19,9 +18,6 @@
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.6",
     "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.5",
-    "prettier": "^3.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.0"
