--- a/manifests/route.yaml
+++ b/manifests/route.yaml
@@ -1,10 +1,10 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: sijoittaja-route
+  name: sijoittaja-frontend-route
   namespace: ohtuprojekti-staging
   labels:
-    app: sijoittaja
+    app: sijoittaja-frontend
     type: external
 spec:
   host: ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
@@ -12,7 +12,7 @@ spec:
     targetPort: 4173
   to:
     kind: Service
-    name: sijoittaja-svc
+    name: sijoittaja-frontend-svc
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
