--- a/manifests/service-frontend.yaml
+++ b/manifests/service-frontend.yaml
@@ -12,10 +12,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sijoittaja-svc
+  name: sijoittaja-frontend-svc
 spec:
   selector:
-    app: sijoittaja
+    app: sijoittaja-frontend
   ports:
     - protocol: TCP
       port: 4173
