feat: add npm script to start PostgreSQL Docker container

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "tilasijoittelu backend",
   "main": "index.js",
   "scripts": {
+    "start:db": "docker compose -f database.yaml up",
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint .",
