--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "install:all": "npm install --prefix backend && npm install --prefix frontend",
+    "start:db": "npm run start:db --prefix backend",
     "dev:backend": "npm run dev --prefix backend",
     "lint:backend": "npm run lint --prefix backend",
     "start:backend": "npm start --prefix backend",
