--- a/manifests/route.yaml
+++ b/manifests/route.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sijoittaja-route
   namespace: ohtuprojekti-staging
   labels:
-    app: sijoittaja
+    app: sijoittaja-frontend
     type: external
 spec:
   host: ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
