--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,15 +1,18 @@
 .DS_Store
 
 node_modules
-build
+build/
 
 .env
+.env.local
+.env.*.local
 .env.*
 
 coverage
 
 .vscode/
 
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
