--- a/manifests/service-backend.yaml
+++ b/manifests/service-backend.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sijoittaja-backend-svc
+  annotations:
+    service.beta.openshift.io/serving-cert-secret-name: backend-tls
+
 spec:
   selector:
     app: sijoittaja-backend
   ports:
     - protocol: TCP
       port: 3000
-      targetPort: 3000
+      targetPort: 3443
   type: ClusterIP
