--- a/manifests/route.yaml
+++ b/manifests/route.yaml
@@ -7,7 +7,7 @@ metadata:
     app: sijoittaja-frontend
     type: external
 spec:
-  host: ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
+  host: sijoittaja-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
   port:
     targetPort: 4173
   to:
