--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
-FROM node:20
-WORKDIR /usr/src/app/backend
+FROM node:alpine
+
+WORKDIR /app
 
 COPY package*.json ./
 
@@ -9,8 +10,6 @@ COPY . .
 
 EXPOSE 3000
 
-RUN chmod -R 777 *
-
 RUN npm run tsc
 
-CMD [ "npm", "run", "start"]
+CMD ["node", "build/index.js"]
