--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,10 +18,10 @@ on:
 
 jobs:
   frontend:
-    uses: ./.github/workflows/frontend.yml
+    uses: ./.github/workflows/frontend.yaml
 
   backend:
-    uses: ./.github/workflows/backend.yml
+    uses: ./.github/workflows/backend.yaml
     secrets:
       SECRET: ${{ secrets.SECRET }}
 
